--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular2-moment": "^1.8.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
+    "weathericons": "^2.1.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
